<resources>
    <string name="app_name">Multitasker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>

    <string name="create">Create</string>
    <string name="cancel_create">Cancel</string>
    <string name="alert1_title">Alert 1</string>
    <string name="fragment2_alarm_list">Alarm List</string>
    <string name="note_optional">note (optional)</string>
    <string name="short_note">short note (optional)</string>
    <string name="alarm_element">alarm element</string>

    <string name="monday">M</string>
    <string name="friday">F</string>
    <string name="thursday">T</string>
    <string name="sunday">S</string>
    <string name="saturday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>

    <string name="save_button">save</string>
    <string name="list_alarm_numbers">Alarms</string>
    <string name="alarms">alarms</string>


    <string name="update">update</string>
    <string name="edit">edit</string>
    <string name="next_alarm">Next Alarm</string>
    <string name="repeat">repeat</string>

    <!--todo used in spinner for repeat mode selection-->
    <string-array name="spinner_repeat_choices">
        <item>single</item>
        <item>weekly</item>
        <item>biweekly</item>
        <item>monthly</item>
    </string-array>
</resources>